@@ -121,7 +121,8 @@ More documentation can be found in our [Knowledge Base](https://www.download-mon
 
 == Changelog ==
 = 5.0.0 - TBD =
-Fixed: File Browser not working on installations that return '//' ( double slashed ) paths ( [#1412](https://github.com/WPChill/download-monitor/issues/1412) )
+Fixed: File Browser not working on installations that return '//' ( double slashed ) paths. ( [#1412](https://github.com/WPChill/download-monitor/issues/1412) )
+Changed: File Browser no longer displays cross-site folders in multisite environments. ( [#1402](https://github.com/WPChill/download-monitor/issues/1402) )
 
 = 4.9.7 - 23.01.2024 =
 Fixed: [] operator not supported for strings error. ( [#1409](https://github.com/WPChill/download-monitor/issues/1409) )
